Added Workflow_dispatch push method

--- a/values.yaml
+++ b/values.yaml
@@ -1,3 +1,4 @@
+
 common:
   containerRegistryURL: todoappacr001.azurecr.io
   ingressClassName: azure-application-gateway
@@ -11,3 +12,16 @@ ui:
     tag: v4
   port: 80
   servicePort: 80
+
+get-tasks:
+  ingress:
+    host: get-tasks-api.applicationtesting.online
+  replicas: 2
+  image:
+    name: todo-get-tasks-api
+    tag: v1
+  port: 8000
+  servicePort: 80
+  connectionString: "Driver={ODBC Driver 18 for SQL Server};Server=tcp:todoapp-sql-server01.database.windows.net,1433;Database=sql-database-todoapp;Uid=devdbprivilgeuser;Pwd=Adminuser@123;Encrypt=yes;TrustServerCertificate=no;Connection Timeout=30;"
+
+    
