--- a/templates/todo-add-task/ingress.yaml
+++ b/templates/todo-add-task/ingress.yaml
@@ -5,7 +5,7 @@ metadata:
 spec:
   ingressClassName: {{ .Values.commmon-ingressClassName}}
   rules:
-    - host: {{ .Values.add-task.ingress.host }}
+    - host: {{ .Values.addTask.ingress.host }}
       http:
         paths:
           - pathType: Prefix
@@ -14,4 +14,4 @@ spec:
               service:
                 name: "{{.Release.Name }}-todo-add-tasks-api-service"
                 port:
-                  number: {{ .Values.add-task.servicePort }}
+                  number: {{ .Values.addTask.servicePort }}
