--- a/values.yaml
+++ b/values.yaml
@@ -12,7 +12,7 @@ ui:
   port: 80
   servicePort: 80
 
-get-tasks:
+getTasks:
   ingress: 
     host: get-tasks-api.applicationtesting.online
   replicas: 2
@@ -23,7 +23,7 @@ get-tasks:
   servicePort: 80
   connectionString: "Driver={ODBC Driver 18 for SQL Server};Server=tcp:todoapp-sql-server01.database.windows.net,1433;Database=sql-database-todoapp;Uid=devdbprivilgeuser;Pwd=Adminuser@123;Encrypt=yes;TrustServerCertificate=no;Connection Timeout=30;"
 
-add-task:
+addTask:
   ingress:
     host: add-tasks-api.applicationtesting.online
   replicas: 2
@@ -34,7 +34,7 @@ add-task:
   servicePort: 80
   connectionString: "Driver={ODBC Driver 18 for SQL Server};Server=tcp:todoapp-sql-server01.database.windows.net,1433;Database=sql-database-todoapp;Uid=devdbprivilgeuser;Pwd=Adminuser@123;Encrypt=yes;TrustServerCertificate=no;Connection Timeout=30;"
 
-delete-task:
+deleteTask:
   ingress: 
     host: delete-tasks-api.applicationtesting.online
   replicas: 2
