--- a/templates/todo-get-tasks/ingress.yaml
+++ b/templates/todo-get-tasks/ingress.yaml
@@ -5,7 +5,7 @@ metadata:
 spec:
   ingressClassName: {{ .Values.ingressClassName }}
   rules:
-    - host: {{ .Values.get-tasks.ingress.host }}
+    - host: {{ .Values.getTasks.ingress.host }}
       http:
         paths:
           - pathType: Prefix
@@ -14,4 +14,4 @@ spec:
               service:
                 name: "{{ .Release.Name }}-todo-get-tasks-api-service"
                 port:
-                  number: {{ .Values.get-tasks.servicePort }}
+                  number: {{ .Values.getTasks.servicePort }}
