--- a/templates/todo-delete-task/ingress.yaml
+++ b/templates/todo-delete-task/ingress.yaml
@@ -1,7 +1,7 @@
 apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
-  name: "{{ .Relase.Name }}-todo-delete-task-api-ingress"
+  name: "{{ .Release.Name }}-todo-delete-task-api-ingress"
 spec:
   ingressClassName: {{ .Values.common.ingressClassName }}
   rules:
